# doubles

./: .gitignore  README.md  pyproject.toml
doubles/: __init__.py  app_logging.py  app_settings.py  doubles_app.py  progress.py  question_store.py  settings.yaml
tests/: test-input.xlsx  test_doubles.py
