[tool.poetry]
name = "doubles"
version = "0.1.0"
description = ""
authors = ["mikecv <galacticwingcommander@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.9,<3.12"
spacy = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.0"
isort = "^5.12.0"
pylint = "^2.17.5"
click = "^8.1.7"
dotsi = "^0.0.3"
PyYAML = "^6.0.1"
spacy-universal-sentence-encoder = "^0.4.6"
protobuf = "<=3.20.x"

[tool.poe.tasks]
isort = "isort --profile google --sl -l 120 --check-only --diff doubles"
black = "black --line-length 120 --check --diff doubles"
lint = "pylint --rcfile=pylintrc -r y doubles"
mypy = "mypy doubles"
pytest = "pytest test --verbose -v -s"
utest = "pytest . --verbose -v -s"
type_checker = "mypy ."
test_all = ["isort", "black", "mypy", "pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
doubles-go = "doubles.doubles_app:run"